[package]
name = "client"
version = "0.1.0"
authors = ["Bachue Zhou <bachue.shu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
env_logger = "0.8.4"
log = "0.4.14"
logger = "0.4.0"
md-5 = "0.9.1"
rand = "0.8.4"
signal-hook = "0.3.9"
